--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
 	},
 	"dependencies": {
 		"nativescript-theme-core": "~1.0.4",
-		"preact-to-nativescript": "0.0.1",
 		"preact-nativescript-components": "0.0.1",
+		"preact-to-nativescript": "0.0.3",
 		"tns-core-modules": "~3.4.0"
 	},
 	"devDependencies": {
 		"babel-traverse": "6.26.0",
 		"babel-types": "6.26.0",
 		"babylon": "6.18.0",
-		"lazy": "1.0.11"
+		"lazy": "1.0.11",
+		"rollup": "^0.54.0",
+		"rollup-plugin-typescript2": "^0.9.0",
+		"typescript": "^2.6.2"
+	},
+	"scripts": {
+		"build": "./node_modules/.bin/rollup -c"
 	}
 }
