--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 	},
 	"dependencies": {
 		"nativescript-theme-core": "~1.0.4",
-		"preact-nativescript-components": "0.0.1",
-		"preact-to-nativescript": "0.0.3",
+		"preact": "^8.2.7",
+		"preact-nativescript-components": "0.0.6",
+		"preact-to-nativescript": "0.0.5",
 		"tns-core-modules": "~3.4.0"
 	},
 	"devDependencies": {
@@ -21,10 +22,11 @@
 		"babylon": "6.18.0",
 		"lazy": "1.0.11",
 		"rollup": "^0.54.0",
-		"rollup-plugin-typescript2": "^0.9.0",
+		"rollup-plugin-typescript2": "^0.10.0",
 		"typescript": "^2.6.2"
 	},
 	"scripts": {
-		"build": "./node_modules/.bin/rollup -c"
+		"build": "./node_modules/.bin/rollup -c",
+		"dev": "./node_modules/.bin/rollup -c -w"
 	}
 }
